--- a/cgm.html
+++ b/cgm.html
@@ -76,7 +76,7 @@
 								<article id="main">
 									<section>
 										<header>
-											<h3>CGM of DLAs!</h3>
+											<h3></h3>
 										</header>
 										<a href="#" class="image featured"><img src="images/cgmofDLAs_ex.jpg" alt="" /></a>
 
@@ -86,7 +86,7 @@
 										galactic medium (CGM) surrounding 32 damped Lyα absorption systems (DLAs). The primary quasar
 										sightline in each pair probes an intervening DLA in the redshift range 1.6 < z<sub>abs</sub> < 3.5, such that the
 										secondary sightline probes absorption from Lyα and a large suite of metal-line transitions (including
-										O I, C II, C IV, Si II, and Si IV) in the DLA’s CGM at transverse distances 24 kpc ≤ R<\sub>⊥</sub> ≤ 284 kpc.	
+										O I, C II, C IV, Si II, and Si IV) in the DLA’s CGM at transverse distances 24 kpc < R<\sub>⊥</sub> < 284 kpc.	
 										</p>
 									</section>
 
