--- a/pub.html
+++ b/pub.html
@@ -71,7 +71,7 @@
 									<span style="color:#00008B">Stephanie M. Urbano Stawinski</span>, Kate H.R. Rubin, J. Xavier Prochaska, Joseph F. Hennawi,
 									Nicolas Tejos, Michele Fumagalli, Marc Rafelski, Evan N. Kirby, Elisabeta Lusso,
 									Zachary Hafen <br>
-									<a href="#"><span style="color:#E49B0F">In prep.</span></a>
+									<a href="#"><span style="color:#E49B0F">Submitted</span></a>
 								</p>
 							</section>
           						<header>
