--- a/pub.html
+++ b/pub.html
@@ -79,6 +79,15 @@
 							</header>
 							<section>
 								<header>
+									<h3>MAGAZ3NE: High Stellar Velocity Dispersions for Ultra-Massive Quiescent Galaxies at  z ≳ 3</h3>
+								</header>
+								<p>
+								Ben Forrest, Gillian Wilson, Adam Muzzin, Danilo Marchesini, M. C. Cooper, Z. Cemile Marsan, Marianna Annunziatella, Ian McConachie, 
+									Kumail Zaidi, Percy Gomez, <span style="color:#00008B"> Stephanie M. Urbano Stawinski </span>, Wenjun Chang, Gabriella de Lucia, Francesco La Barbera, Lori Lubin, 
+									Julie Nantais, Theodore Pena, Paolo Saracco, Jason Surace, and Mauro Stefanon <br>
+								<a href="https://ui.adsabs.harvard.edu/abs/2022arXiv220804329F/abstract"> <span style="color:#E49B0F"> Submitted </span></a>
+								</p>
+								<header>
 									<h3>Additional Multicolor Photometric Observations of the Latest Eruption of the Recurrent Nova M31N 2008-12a</h3>
 								</header>
 								<p>
