--- a/pub.html
+++ b/pub.html
@@ -58,10 +58,10 @@
 							</header>
 							<section>
 								<header>
-									<h3>Spectroscopic Redshift Survey in EGS field using Keck/DEIMOS: Preparation for the Cosmic Evolution Early Release Science Survey</h3>
+									<h3>Deeper than DEEP: A Spectroscopic Survey of z>3 Lyα Emitters in the Extended Groth Strip</h3>
 								</header>
 								<p>
-									<span style="color:#00008B">Stephanie M. Urbano Stawinski</span>, M. C. Cooper <br>
+									<span style="color:#00008B">Stephanie M. Urbano Stawinski</span>, M. C. Cooper, Steven L. Finkelstein, Intae Jung, Pablo G. Pérez-González<br>
 									<a href="#"><span style="color:#E49B0F">In prep.</span></a>
 								</p>
 								<header>
