--- a/pub.html
+++ b/pub.html
@@ -79,13 +79,26 @@
 							</header>
 							<section>
 								<header>
+									<h3>CEERS Key Paper IV: Galaxies at  4<z<9  are Bluer than They Appear -- Characterizing Galaxy Stellar Populations from Rest-Frame  ∼1  micron Imaging </h3>
+								</header>
+								<p>
+									CASEY PAPOVICH, JUSTIN W. COLE, GUANG YANG, STEVEN L. FINKELSTEIN, GUILLERMO BARRO, VÉRONIQUE BUAT, DENIS BURGARELLA, PABLO G. PÉREZ-GONZÁLEZ, 
+									PAOLA SANTINI, LISE-MARIE SEILLÉ, LU SHEN, PABLO ARRABAL HARO, MICAELA B. BAGLEY, ERIC F. BELL, LAURA BISIGELLO, ANTONELLO CALABRÒ, 
+									CAITLIN M. CASEY, MARCO CASTELLANO, KATHERINE CHWOROWSKY, NIKKO J. CLERI, M. C. COOPER, LUCA COSTANTIN, MARK DICKINSON, HENRY C. FERGUSON, 
+									ADRIANO FONTANA, MAURO GIAVALISCO, ANDREA GRAZIAN, NORMAN A. GROGIN, NIMISH P. HATHI, BENNE W. HOLWERDA, TAYLOR A. HUTCHISON, JEYHAN S. KARTALTEPE, 
+									LISA J. KEWLEY, ALLISON KIRKPATRICK, DALE D. KOCEVSKI, ANTON M. KOEKEMOER, REBECCA L. LARSON, ARIANNA S. LONG, RAY A. LUCAS, LAURA PENTERICCI, 
+									NOR PIRZKAL, SWARA RAVINDRANATH, RACHEL S. SOMERVILLE, JONATHAN R. TRUMP, <span style="color:#00008B"> STEPHANIE M. URBANO STAWINSKI</span>, 
+									BENJAMIN J. WEINER, STEPHEN M. WILKINS, L. Y. AARON YUNG, and JORGE A. ZAVALA
+								<a href="https://ui.adsabs.harvard.edu/abs/2023arXiv230100027P/abstract"> <span style="color:#E49B0F"> Submitted </span></a>
+								</p>
+								<header>
 									<h3>MAGAZ3NE: High Stellar Velocity Dispersions for Ultra-Massive Quiescent Galaxies at  z ≳ 3</h3>
 								</header>
 								<p>
 								Ben Forrest, Gillian Wilson, Adam Muzzin, Danilo Marchesini, M. C. Cooper, Z. Cemile Marsan, Marianna Annunziatella, Ian McConachie, 
 									Kumail Zaidi, Percy Gomez, <span style="color:#00008B"> Stephanie M. Urbano Stawinski </span>, Wenjun Chang, Gabriella de Lucia, Francesco La Barbera, Lori Lubin, 
 									Julie Nantais, Theodore Pena, Paolo Saracco, Jason Surace, and Mauro Stefanon <br>
-								<a href="https://ui.adsabs.harvard.edu/abs/2022arXiv220804329F/abstract"> <span style="color:#E49B0F"> Submitted </span></a>
+								<a href="https://ui.adsabs.harvard.edu/abs/2022arXiv220804329F/abstract"> <span style="color:#E49B0F"> 2022, ApJ, 938, 109 </span></a>
 								</p>
 								<header>
 									<h3>Additional Multicolor Photometric Observations of the Latest Eruption of the Recurrent Nova M31N 2008-12a</h3>
