--- a/cgm.html
+++ b/cgm.html
@@ -76,17 +76,26 @@
 								<article id="main">
 									<section>
 										<header>
-											<h3></h3>
+											<h3>Circumgalatic Medium of Damped Lyman-α Systems</h3>
 										</header>
 										<a href="#" class="image featured"><img src="images/cgmofDLAs_ex.jpg" alt="" /></a>
 
-										<p>									</p>
 										<p>
 										We use medium- and high-resolution spectroscopy of close pairs of quasars to analyze the circum-
 										galactic medium (CGM) surrounding 32 damped Lyα absorption systems (DLAs). The primary quasar
 										sightline in each pair probes an intervening DLA in the redshift range 1.6 < z<sub>abs</sub> < 3.5, such that the
 										secondary sightline probes absorption from Lyα and a large suite of metal-line transitions (including
 										O I, C II, C IV, Si II, and Si IV) in the DLA’s CGM at transverse distances 24 kpc < R < 284 kpc.	
+										</p>
+									</section>
+									<section>
+										<header>
+											<h3>On the Sizes of Damped Lyman-α Systems </h3>
+										</header>
+										<a href="#" class="image featured"><img src="images/cgmofDLAs_ex.jpg" alt="" /></a>
+
+										<p>
+						
 										</p>
 									</section>
 
