--- a/cgm.html
+++ b/cgm.html
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1>Circumgalatic Medium of Damped Lyman-α Systems</h1>
+								<h1>Diffuse Gas around Galaxies</h1>
 							</header>
 						</div>
 
