--- a/pub.html
+++ b/pub.html
@@ -79,16 +79,15 @@
 							</header>
 							<section>
 								<header>
-									<h3>CEERS Key Paper IV: Galaxies at  4<z<9  are Bluer than They Appear -- Characterizing Galaxy Stellar Populations from Rest-Frame  ∼1  micron Imaging </h3>
+									<h3>CEERS Key Paper IV: Galaxies at  4 < z < 9  are Bluer than They Appear -- Characterizing Galaxy Stellar Populations from Rest-Frame  ∼1  micron Imaging </h3>
 								</header>
 								<p>
-									CASEY PAPOVICH, JUSTIN W. COLE, GUANG YANG, STEVEN L. FINKELSTEIN, GUILLERMO BARRO, VÉRONIQUE BUAT, DENIS BURGARELLA, PABLO G. PÉREZ-GONZÁLEZ, 
-									PAOLA SANTINI, LISE-MARIE SEILLÉ, LU SHEN, PABLO ARRABAL HARO, MICAELA B. BAGLEY, ERIC F. BELL, LAURA BISIGELLO, ANTONELLO CALABRÒ, 
-									CAITLIN M. CASEY, MARCO CASTELLANO, KATHERINE CHWOROWSKY, NIKKO J. CLERI, M. C. COOPER, LUCA COSTANTIN, MARK DICKINSON, HENRY C. FERGUSON, 
-									ADRIANO FONTANA, MAURO GIAVALISCO, ANDREA GRAZIAN, NORMAN A. GROGIN, NIMISH P. HATHI, BENNE W. HOLWERDA, TAYLOR A. HUTCHISON, JEYHAN S. KARTALTEPE, 
-									LISA J. KEWLEY, ALLISON KIRKPATRICK, DALE D. KOCEVSKI, ANTON M. KOEKEMOER, REBECCA L. LARSON, ARIANNA S. LONG, RAY A. LUCAS, LAURA PENTERICCI, 
-									NOR PIRZKAL, SWARA RAVINDRANATH, RACHEL S. SOMERVILLE, JONATHAN R. TRUMP, <span style="color:#00008B"> STEPHANIE M. URBANO STAWINSKI</span>, 
-									BENJAMIN J. WEINER, STEPHEN M. WILKINS, L. Y. AARON YUNG, and JORGE A. ZAVALA
+									Casey Papovich, Justin W. Cole, Guang Yang, Steven L. Finkelstein, Guillermo Barro, Véronique Buat, Denis Burgarella, Pablo G. Pérez-González, Paola Santini, 
+									Lise-Marie Seillé, Lu Shen, Pablo Arrabal Haro, Micaela B. Bagley, Eric F. Bell, Laura Bisigello, Antonello Calabrò, Caitlin M. Casey, Marco Castellano,
+									Katherine Chworowsky, Nikko J. Cleri, M. C. Cooper, Luca Costantin, Mark Dickinson, Henry C. Ferguson, Adriano Fontana, Mauro Giavalisco, Andrea Grazian,
+									Norman A. Grogin, Nimish P. Hathi, Benne W. Holwerda, Taylor A. Hutchison, Jeyhan S. Kartaltepe, Lisa J. Kewley, Allison Kirkpatrick, Dale D. Kocevski,
+									Anton M. Koekemoer, Rebecca L. Larson, Arianna S. Long, Ray A. Lucas, Laura Pentericci, Nor Pirzkal, Swara Ravindranath, Rachel S. Somerville, 
+									Jonathan R. Trump, <span style="color:#00008B"> Stephanie M. Urbano Stawinski</span>, Benjamin J. Weiner, Stephen M. Wilkins, L. Y. Aaron Yung, and Jorge A. Zavala <br>
 								<a href="https://ui.adsabs.harvard.edu/abs/2023arXiv230100027P/abstract"> <span style="color:#E49B0F"> Submitted </span></a>
 								</p>
 								<header>
