--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								<h3>About me</h3>
 							</header>
 							<p>
-						I am a third year Astrophysics Ph.D student at University of California, Irvine interested in galaxy formation and evolution. In 2019, I earned
+						I am a fourth year Astrophysics Ph.D candidate at University of California, Irvine interested in galaxy formation and evolution. In 2019, I earned
 						my MS in Astronomy at San Diego State University studying the gas around galaxies and its effects on the host galaxy. At UCI, 
 						I have been working on high-redshift galaxy surveys. Using the telescopes at Keck, I have observed distant LyA Emitters in the CEERS field and currently 
 						I am searching for LyA emission from Ultra-Massive galaxies at z > 4. <br>
