--- a/pub.html
+++ b/pub.html
@@ -79,6 +79,15 @@
 							</header>
 							<section>
 								<header>
+									<h3> Rotation Curve Measurement of Dark Matter Content of a z ∼ 0.5 Galaxy </h3>
+								</header>
+								<p>
+									Jake Magee, Caitlin M. Casey, Olivia R. Cooper, Alfonso Melendez, Mia Fong, Jeyhan Karltaltepe, Arianna S. Long,
+									<span style="color:#00008B"> Stephanie Urbano Stawinski </span>, Jaclyn B. Champagne, M. C. Cooper, Andreas L. Faisst,
+									Claudia Maraston, and The  WERLS  Collaboration 
+								<a href="https://ui.adsabs.harvard.edu/abs/2023RNAAS...7..110M/abstract"> <span style="color:#E49B0F"> RNAAS, 2023, 7, 5 </span></a>
+								</p>
+								<header>
 									<h3>CEERS Key Paper IV: Galaxies at  4 < z < 9  are Bluer than They Appear -- Characterizing Galaxy Stellar Populations from Rest-Frame  ∼1  micron Imaging </h3>
 								</header>
 								<p>
@@ -88,7 +97,7 @@
 									Norman A. Grogin, Nimish P. Hathi, Benne W. Holwerda, Taylor A. Hutchison, Jeyhan S. Kartaltepe, Lisa J. Kewley, Allison Kirkpatrick, Dale D. Kocevski,
 									Anton M. Koekemoer, Rebecca L. Larson, Arianna S. Long, Ray A. Lucas, Laura Pentericci, Nor Pirzkal, Swara Ravindranath, Rachel S. Somerville, 
 									Jonathan R. Trump, <span style="color:#00008B"> Stephanie M. Urbano Stawinski</span>, Benjamin J. Weiner, Stephen M. Wilkins, L. Y. Aaron Yung, and Jorge A. Zavala <br>
-								<a href="https://ui.adsabs.harvard.edu/abs/2023arXiv230100027P/abstract"> <span style="color:#E49B0F"> Submitted </span></a>
+								<a href="https://ui.adsabs.harvard.edu/abs/2023ApJ...949L..18P/abstract"> <span style="color:#E49B0F"> 2023, ApJ, 949, 18 </span></a>
 								</p>
 								<header>
 									<h3>MAGAZ3NE: High Stellar Velocity Dispersions for Ultra-Massive Quiescent Galaxies at  z ≳ 3</h3>
