--- a/pub.html
+++ b/pub.html
@@ -84,7 +84,7 @@
 								<p>
 									Jake Magee, Caitlin M. Casey, Olivia R. Cooper, Alfonso Melendez, Mia Fong, Jeyhan Karltaltepe, Arianna S. Long,
 									<span style="color:#00008B"> Stephanie Urbano Stawinski </span>, Jaclyn B. Champagne, M. C. Cooper, Andreas L. Faisst,
-									Claudia Maraston, and The  WERLS  Collaboration 
+									Claudia Maraston, and The  WERLS  Collaboration <br>
 								<a href="https://ui.adsabs.harvard.edu/abs/2023RNAAS...7..110M/abstract"> <span style="color:#E49B0F"> RNAAS, 2023, 7, 5 </span></a>
 								</p>
 								<header>
