--- a/pub.html
+++ b/pub.html
@@ -62,7 +62,7 @@
 								</header>
 								<p>
 									<span style="color:#00008B">Stephanie M. Urbano Stawinski</span>, M. C. Cooper, Steven L. Finkelstein, Intae Jung, Pablo G. Pérez-González<br>
-									<a href="https://arxiv.org/abs/2307.04782"><span style="color:#E49B0F">Submitted to MNRAS</span></a>
+									<a href="https://ui.adsabs.harvard.edu/abs/2023arXiv230704782U/abstract"><span style="color:#E49B0F">Submitted to MNRAS</span></a>
 								</p>
 								<header>
 									<h3>On the Metallicities and Kinematics of the Circumgalactic Media of Damped Lyα Systems at z∼2</h3>
