--- a/index.html
+++ b/index.html
@@ -57,13 +57,17 @@
 								<h3>About me</h3>
 							</header>
 							<p>
-						I am a fourth year Astrophysics Ph.D candidate at University of California, Irvine interested in galaxy formation and evolution. In 2019, I earned
-						my MS in Astronomy at San Diego State University studying the gas around galaxies and its effects on the host galaxy. At UCI, 
-						I have been working on high-redshift galaxy surveys. Using the telescopes at Keck, I have observed distant LyA Emitters in the CEERS field and currently 
-						I am searching for LyA emission from Ultra-Massive galaxies at z > 4. <br>
+						I am a fourth year Astrophysics Ph.D candidate at University of California, Irvine interested in galaxy formation and evolution. 
+						<br> In 2019, I earned my MS in Astronomy at San Diego State University studying the gas around galaxies (specifically invovling Damped Lyman-alpha
+						absorption line systems) and its effects on the host galaxy. Now at UCI, 
+						I have been working on detecting Lyman-alpha in emission at z > 4. Using the telescopes at Keck (mainly DEIMOS and LRIS), I have observed Lyman-alpha emission
+						from distant galaxies.
+						I am part of the WERLS collaboration looking for high-z Lyman-alpha emission in the EGS, COSMOS, and UDS fields using Keck/LRIS. I am 
+						also part of the MAGAZ3NE collaboration, specifically looking at detected Lyman-alpha emission from Ultra-Massive galaxies at z > 4. <br>
 						Outside of my research, I believe mentorship, teaching, and outreach are 
 						incredibly important in encouraging others to pursue science and helping students succeed in academia. Throughout my career, I have 
-						worked to give back to the community in this way. I have volunteered in many outreach efforts and mentorship programs (read more about them <a href="outreach.html">here</a>).   <br>
+						worked to give back to the community in this way. I have volunteered in many outreach efforts and mentorship programs 
+						(read more about them <a href="outreach.html">here</a>).   <br>
 							</p>
 						</article>
 					</div>
