--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<header>
 								<h1>Stephanie Urbano Stawinski</h1>
 								<hr />
-								<p>Ph.D. Student at University of California, Irvine</p>
+								<p>Ph.D. Candidate at University of California, Irvine</p>
 							</header>
 						</div>
 
@@ -57,7 +57,7 @@
 								<h3>About me</h3>
 							</header>
 							<p>
-						I am a fourth year Astrophysics Ph.D candidate at University of California, Irvine interested in galaxy formation and evolution. 
+						Hello! I am a fourth year Astrophysics Ph.D candidate at University of California, Irvine interested in galaxy formation and evolution. 
 						<br> In 2019, I earned my MS in Astronomy at San Diego State University studying the gas around galaxies (specifically invovling Damped Lyman-alpha
 						absorption line systems) and its effects on the host galaxy. Now at UCI, 
 						I have been working on detecting Lyman-alpha in emission at z > 4. Using the telescopes at Keck (mainly DEIMOS and LRIS), I have observed Lyman-alpha emission
