--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 							<p>
 						Hello! I am a fourth year Astrophysics Ph.D candidate at University of California, Irvine interested in galaxy formation and evolution. 
 						<br> In 2019, I earned my MS in Astronomy at San Diego State University studying the gas around galaxies (specifically invovling Damped Lyman-alpha
-						absorption line systems) and its effects on the host galaxy. Now at UCI, 
-						I have been working on detecting Lyman-alpha in emission at z > 4. Using the telescopes at Keck (mainly DEIMOS and LRIS), I have observed Lyman-alpha emission
-						from distant galaxies.
-						I am part of the WERLS collaboration looking for high-z Lyman-alpha emission in the EGS, COSMOS, and UDS fields using Keck/LRIS. I am 
-						also part of the MAGAZ3NE collaboration, specifically looking at detected Lyman-alpha emission from Ultra-Massive galaxies at z > 4. <br>
+						absorption line systems) and its effects on the host galaxy. 
+						Now at UCI, I have been working on detecting Lyman-alpha emitters at z > 4. Using the telescopes at Keck (mainly DEIMOS and LRIS), I have conducted surveys
+						searching for Lyman-alpha emission from distant galaxies.
+						I am part of the WERLS collaboration looking for high-z Lyman-alpha emitters in the EGS, COSMOS, and UDS fields using Keck/LRIS. I am 
+						also part of the MAGAZ3NE collaboration, specifically studying detected Lyman-alpha emission from Ultra-Massive galaxies at z > 4. <br>
 						Outside of my research, I believe mentorship, teaching, and outreach are 
 						incredibly important in encouraging others to pursue science and helping students succeed in academia. Throughout my career, I have 
 						worked to give back to the community in this way. I have volunteered in many outreach efforts and mentorship programs 
