--- a/lyaE.html
+++ b/lyaE.html
@@ -55,14 +55,14 @@
 	
 								<section>
 									<header>
-										<h3>Recent Publications </h3>
+										<h3>Publications </h3>
 									</header>
 									<p>
-										This is under construction, to be updated soon!
+										Deeper than DEEP: A Spectroscopic Survey of z>3 Lyα Emitters in the Extended Groth Strip
 									</p>
 									<div class="row gtr-50">
 										<div class="col-4">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
+											<a href="https://arxiv.org/abs/2307.04782" class="image fit"><img src="images/picDeeper.png" alt="" /></a>
 										</div>
 										<div class="col-8">
 											<h4></h4>
@@ -79,20 +79,30 @@
 										<header>
 											<h3>Lyα Emitters in CEERs</h3>
 										</header>
-										<a href="#" class="image featured"><img src="images/lyaE_ex.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 
 										<p>
 										We are approaching a new era in the field of high-redshift galaxies with the launch of the James Webb Space Telescope (JWST). 
 										Thus, it is critical to provide a robust sample of potential targets, as well as understand galaxies in the epochs near reionization
 										to bridge the gap between current and future observations. We present the results from 2 ongoing spectroscopic surveys to analyze 
 										Lyman-α emitters at the epoch before reionization (z~4-6). 
-										<p>
-											We introduce an extensive survey of z > 3 Lyman-α emitters in the EGS field. Using HST photometry, we select ~800 potential
-											Lyman-α emitters with z<sub>phot</sub> > 3 for spectroscopic follow up with Keck/DEIMOS. We confirm 63 Lyman-α emitters 
-											at 4 < z < 6, including 5 with z > 6. Our observations will help constrain the Lyman-α fraction from 4 < z < 6 in an independent 
+										<p><br>
+										<b>Deeper than Deep Survey</b>
+											with M. C. Cooper, Steven L. Finkelstein, Intae Jung, Pablo G. Pérez-González, Caitlin M. Casey,
+											Olivia R. Cooper, Nimish P. Hathi, Benne W. Holwerda, Anton M. Koekemoer, Vital Fernández, Rebecca L. Larson, Ray A. Lucas, 
+											L. Y. Aaron Yung
+											<br>
+											We introduce an extensive survey of z > 3 Lyman-α emitters in the EGS field. Using HST photometry, we select 947 potential
+											Lyman-α emitters with z<sub>phot</sub> > 3 for spectroscopic follow up with Keck/DEIMOS. We confirm 126 Lyman-α emitters 
+											at 2.8 < z < 6.5, including 4 with z > 6. Our observations will help constrain the Lyman-α fraction from 4 < z < 6 in an independent 
 											field from previous studies. In addition, this survey will greatly assist target selection for The Cosmic Evolution Early Release Science 
 											Survey (CEERS), which will study >400 galaxies in the EGS field within the first 5 months of JWST science observations.										</p>
-											
+										</p>
+										<p>
+										<b>WERLS Survey</b>
+										with 
+										<br>
+										We introduce a											
 										</p>
 									</section>
 								</article>
