--- a/pub.html
+++ b/pub.html
@@ -61,7 +61,9 @@
 									<h3>Deeper than DEEP: A Spectroscopic Survey of z>3 Lyα Emitters in the Extended Groth Strip</h3>
 								</header>
 								<p>
-									<span style="color:#00008B">Stephanie M. Urbano Stawinski</span>, M. C. Cooper, Steven L. Finkelstein, Intae Jung, Pablo G. Pérez-González<br>
+									<span style="color:#00008B">Stephanie M. Urbano Stawinski</span>,  M. C. Cooper, Steven L. Finkelstein, Intae Jung, Pablo G. Pérez-González, 
+									Caitlin M. Casey, Olivia R. Cooper, Nimish P. Hathi, Benne W. Holwerda, Anton M. Koekemoer, Vital Fernández, Rebecca L. Larson, Ray A. Lucas,
+									L. Y. Aaron Yung<br>
 									<a href="https://ui.adsabs.harvard.edu/abs/2023arXiv230704782U/abstract"><span style="color:#E49B0F">Submitted to MNRAS</span></a>
 								</p>
 								<header>
