--- a/lyaE.html
+++ b/lyaE.html
@@ -62,7 +62,7 @@
 									</p>
 									<div class="row gtr-50">
 										<div class="col-4">
-											<a href="https://arxiv.org/abs/2307.04782" class="image fit"><img src="images/picDeeper.png" alt="" /></a>
+											<a href="https://arxiv.org/abs/2307.04782" class="image fit"><img src="images/lya_footprint.png" alt="" /></a>
 										</div>
 										<div class="col-8">
 											<h4></h4>
@@ -87,7 +87,7 @@
 										to bridge the gap between current and future observations. We present the results from 2 ongoing spectroscopic surveys to analyze 
 										Lyman-α emitters at the epoch before reionization (z~4-6). 
 										<p><br>
-										<b>Deeper than Deep Survey</b>
+										<h2><b>Deeper than Deep Survey</b> </h2> <br>
 											with M. C. Cooper, Steven L. Finkelstein, Intae Jung, Pablo G. Pérez-González, Caitlin M. Casey,
 											Olivia R. Cooper, Nimish P. Hathi, Benne W. Holwerda, Anton M. Koekemoer, Vital Fernández, Rebecca L. Larson, Ray A. Lucas, 
 											L. Y. Aaron Yung
@@ -96,7 +96,7 @@
 											Lyman-α emitters with z<sub>phot</sub> > 3 for spectroscopic follow up with Keck/DEIMOS. We confirm 126 Lyman-α emitters 
 											at 2.8 < z < 6.5, including 4 with z > 6. Our observations will help constrain the Lyman-α fraction from 4 < z < 6 in an independent 
 											field from previous studies. In addition, this survey will greatly assist target selection for The Cosmic Evolution Early Release Science 
-											Survey (CEERS), which will study >400 galaxies in the EGS field within the first 5 months of JWST science observations.										</p>
+											Survey (CEERS), which will study >400 galaxies in the EGS field within the first 5 months of JWST science observations.	<br>									</p>
 										</p>
 										<p>
 										<b>WERLS Survey</b>
