--- a/lyaE.html
+++ b/lyaE.html
@@ -99,8 +99,8 @@
 											Survey (CEERS), which will study >400 galaxies in the EGS field within the first 5 months of JWST science observations.	<br>									</p>
 										</p>
 										<p>
-										<b>WERLS Survey</b>
-										with 
+										<b>WERLS Survey</b><br>
+										with Caitlin M. Casey, Jeyhan Kartaltepe, Olivia Cooper, Arianna Long, Mike Cooper, and others
 										<br>
 										We introduce a											
 										</p>
