--- a/lyaE.html
+++ b/lyaE.html
@@ -76,22 +76,19 @@
 							<div class="col-8 col-12-mobile imp-mobile" id="content">
 								<article id="main">
 									<section>
-										<header>
-											<h3>Lyα Emitters in CEERs</h3>
-										</header>
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-
 										<p>
 										We are approaching a new era in the field of high-redshift galaxies with the launch of the James Webb Space Telescope (JWST). 
 										Thus, it is critical to provide a robust sample of potential targets, as well as understand galaxies in the epochs near reionization
 										to bridge the gap between current and future observations. We present the results from 2 ongoing spectroscopic surveys to analyze 
 										Lyman-α emitters at the epoch before reionization (z~4-6). 
 										<p><br>
+											
 										<h2><b>Deeper than Deep Survey</b> </h2> <br>
 											with M. C. Cooper, Steven L. Finkelstein, Intae Jung, Pablo G. Pérez-González, Caitlin M. Casey,
 											Olivia R. Cooper, Nimish P. Hathi, Benne W. Holwerda, Anton M. Koekemoer, Vital Fernández, Rebecca L. Larson, Ray A. Lucas, 
 											L. Y. Aaron Yung
 											<br>
+											<a href="https://arxiv.org/abs/2307.04782" class="image fit"><img src="images/lya_footprint.png" alt="" />
 											We introduce an extensive survey of z > 3 Lyman-α emitters in the EGS field. Using HST photometry, we select 947 potential
 											Lyman-α emitters with z<sub>phot</sub> > 3 for spectroscopic follow up with Keck/DEIMOS. We confirm 126 Lyman-α emitters 
 											at 2.8 < z < 6.5, including 4 with z > 6. Our observations will help constrain the Lyman-α fraction from 4 < z < 6 in an independent 
