--- a/lyaE.html
+++ b/lyaE.html
@@ -58,19 +58,9 @@
 										<h3>Publications </h3>
 									</header>
 									<p>
-										Deeper than DEEP: A Spectroscopic Survey of z>3 Lyα Emitters in the Extended Groth Strip
+										<h4><a href="https://arxiv.org/abs/2307.04782"> Deeper than DEEP: A Spectroscopic Survey of z>3 Lyα Emitters in the 
+											Extended Groth Strip</a></h4>
 									</p>
-									<div class="row gtr-50">
-										<div class="col-4">
-											<a href="https://arxiv.org/abs/2307.04782" class="image fit"><img src="images/lya_footprint.png" alt="" /></a>
-										</div>
-										<div class="col-8">
-											<h4></h4>
-											<p>
-												
-											</p>
-									</div>
-
 								</section>
 							</div>
 							<div class="col-8 col-12-mobile imp-mobile" id="content">
