--- a/lyaE.html
+++ b/lyaE.html
@@ -55,7 +55,7 @@
 	
 								<section>
 									<header>
-										<h3>Publications </h3>
+										<h3>Quick Link Publications </h3>
 									</header>
 									<p>
 										<h4><a href="https://arxiv.org/abs/2307.04782"> Deeper than DEEP: A Spectroscopic Survey of z>3 Lyα Emitters in the 
@@ -85,11 +85,12 @@
 											field from previous studies. In addition, this survey will greatly assist target selection for The Cosmic Evolution Early Release Science 
 											Survey (CEERS), which will study >400 galaxies in the EGS field within the first 5 months of JWST science observations.	<br>									</p>
 										</p>
-										<p>
-										<b>WERLS Survey</b><br>
-										with Caitlin M. Casey, Jeyhan Kartaltepe, Olivia Cooper, Arianna Long, Mike Cooper, and others
-										<br>
-										We introduce a											
+										<h2><b>WERLS Survey</b> </h2> <br>
+											with Caitlin M. Casey, Jeyhan Kartaltepe, Olivia Cooper, Arianna Long, Mike Cooper, and others
+											<br>
+											<a href="https://arxiv.org/abs/2307.04782" class="image fit"><img src="images/picture" alt="" />
+											Summary of WERLS	<br>									
+											</p>
 										</p>
 									</section>
 								</article>
