--- a/lyaE.html
+++ b/lyaE.html
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1>Lyα Emitters</h1>
+								<h1>High-z Lyα Emitters</h1>
 							</header>
 						</div>
 
@@ -55,7 +55,7 @@
 	
 								<section>
 									<header>
-										<h3>Quick Link Publications </h3>
+										<h2>Quick Link Publications </h2>
 									</header>
 									<p>
 										<h4><a href="https://arxiv.org/abs/2307.04782"> Deeper than DEEP: A Spectroscopic Survey of z>3 Lyα Emitters in the 
