--- a/lyaE.html
+++ b/lyaE.html
@@ -58,8 +58,8 @@
 										<h2>Quick Link Publications </h2>
 									</header>
 									<p>
-										<h4><a href="https://arxiv.org/abs/2307.04782"> Deeper than DEEP: A Spectroscopic Survey of z>3 Lyα Emitters in the 
-											Extended Groth Strip</a></h4>
+										<h4><span style="color:#00008B"><a href="https://arxiv.org/abs/2307.04782"> Deeper than DEEP: A Spectroscopic Survey of z>3 Lyα Emitters in the 
+											Extended Groth Strip</a></span></h4>
 									</p>
 								</section>
 							</div>
