--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 							</header>
 							<p>
 						Hello! I am a fourth year Astrophysics Ph.D candidate at University of California, Irvine interested in galaxy formation and evolution. 
-						<br> In 2019, I earned my MS in Astronomy at San Diego State University studying the gas around galaxies (specifically invovling Damped Lyman-alpha
-						absorption line systems) and its effects on the host galaxy. 
+						<br> In 2019, I earned my MS in Astronomy at San Diego State University studying the gas around galaxies (specifically involving the CGM
+						Damped Lyman-alpha absorption line systems) and its effects on the host galaxy. 
 						Now at UCI, I have been working on detecting Lyman-alpha emitters at z > 4. Using the telescopes at Keck (mainly DEIMOS and LRIS), I have conducted surveys
 						searching for Lyman-alpha emission from distant galaxies.
 						I am part of the WERLS collaboration looking for high-z Lyman-alpha emitters in the EGS, COSMOS, and UDS fields using Keck/LRIS. I am 
