--- a/lyaE.html
+++ b/lyaE.html
@@ -78,7 +78,7 @@
 											Olivia R. Cooper, Nimish P. Hathi, Benne W. Holwerda, Anton M. Koekemoer, Vital Fernández, Rebecca L. Larson, Ray A. Lucas, 
 											L. Y. Aaron Yung
 											<br>
-											<a href="https://arxiv.org/abs/2307.04782" class="image fit"><img src="images/lya_footprint.png" alt="" />
+											<a class="image fit"><img src="images/lya_footprint.png" alt="" /></a>
 											We introduce an extensive survey of z > 3 Lyman-α emitters in the EGS field. Using HST photometry, we select 947 potential
 											Lyman-α emitters with z<sub>phot</sub> > 3 for spectroscopic follow up with Keck/DEIMOS. We confirm 126 Lyman-α emitters 
 											at 2.8 < z < 6.5, including 4 with z > 6. Our observations will help constrain the Lyman-α fraction from 4 < z < 6 in an independent 
@@ -88,7 +88,7 @@
 										<h2><b>WERLS Survey</b> </h2> <br>
 											with Caitlin M. Casey, Jeyhan Kartaltepe, Olivia Cooper, Arianna Long, Mike Cooper, and others
 											<br>
-											<a href="https://arxiv.org/abs/2307.04782" class="image fit"><img src="images/picture" alt="" />
+											<a href="https://arxiv.org/abs/2307.04782" class="image fit"><img src="images/picture" alt="" /></a>
 											Summary of WERLS	<br>									
 											</p>
 										</p>
