--- a/lyaE.html
+++ b/lyaE.html
@@ -69,7 +69,7 @@
 										<p>
 										We are approaching a new era in the field of high-redshift galaxies with the launch of the James Webb Space Telescope (JWST). 
 										Thus, it is critical to provide a robust sample of potential targets, as well as understand galaxies in the epochs near reionization
-										to bridge the gap between current and future observations. We present the results from 2 ongoing spectroscopic surveys to analyze 
+										to bridge the gap between current and future observations. We present the results from 2 spectroscopic surveys to analyze 
 										Lyman-α emitters at the epoch before reionization (z~4-6). 
 										<p><br>
 											
