--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
 								<h3>About me</h3>
 							</header>
 							<p>
+      							<div class="image">
+        						<img src="images/pic01.jpg">
+      							</div>
+      							<div class="text">
 						Hello! I am a fourth year Astrophysics Ph.D candidate at University of California, Irvine interested in galaxy formation and evolution. 
 						<br> In 2019, I earned my MS in Astronomy at San Diego State University studying the gas around galaxies (specifically involving the CGM
 						Damped Lyman-alpha absorption line systems) and its effects on the host galaxy. 
@@ -68,7 +72,8 @@
 						incredibly important in encouraging others to pursue science and helping students succeed in academia. Throughout my career, I have 
 						worked to give back to the community in this way. I have volunteered in many outreach efforts and mentorship programs 
 						(read more about them <a href="outreach.html">here</a>).   <br>
-							</p>
+						</p>
+			      			</div>
 						</article>
 					</div>
 				</div>
