--- a/index.html
+++ b/index.html
@@ -56,8 +56,13 @@
 							<header>
 								<h3>About me</h3>
 							</header>
-							<p>
-						Hello! I am a fourth year Astrophysics Ph.D candidate at University of California, Irvine interested in galaxy formation and evolution. 
+							<div class="row">
+							<div class="col-4">
+							<a href="#" class="image fit"><img src="images/BlogLogo.png" alt="" /></a>
+							</div>
+							<div class="col-8">
+							<p>										
+							Hello! I am a fourth year Astrophysics Ph.D candidate at University of California, Irvine interested in galaxy formation and evolution. 
 						<br> In 2019, I earned my MS in Astronomy at San Diego State University studying the gas around galaxies (specifically involving the CGM
 						Damped Lyman-alpha absorption line systems) and its effects on the host galaxy. 
 						Now at UCI, I have been working on detecting Lyman-alpha emitters at z > 4. Using the telescopes at Keck (mainly DEIMOS and LRIS), I have conducted surveys
@@ -67,8 +72,11 @@
 						Outside of my research, I believe mentorship, teaching, and outreach are 
 						incredibly important in encouraging others to pursue science and helping students succeed in academia. Throughout my career, I have 
 						worked to give back to the community in this way. I have volunteered in many outreach efforts and mentorship programs 
-						(read more about them <a href="outreach.html">here</a>).   <br>
+						(read more about them <a href="outreach.html">here</a>). 
 						</p>
+						</div>
+						</div>
+						<p>
 						</article>
 					</div>
 				</div>
