--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							</header>
 							<div class="row">
 							<div class="col-4">
-							<a href="#" class="image fit"><img src="images/BlogLogo.png" alt="" /></a>
+							<a href="#" class="image fit"><img src="images/IMG_0658.jpg" alt="" /></a>
 							</div>
 							<div class="col-8">
 							<p>										
