--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 								<h3>About me</h3>
 							</header>
 							<div class="row">
-							<div class="col-4">
+							<div class="col-4 col-12-mobile">
 							<a href="#" class="image fit"><img src="images/IMG_0658.jpg" alt="" /></a>
 							</div>
-							<div class="col-8">
+							<div class="col-8 col-12-mobile imp-mobile">
 							<p>										
 							Hello! I am a fourth year Astrophysics Ph.D candidate at University of California, Irvine interested in galaxy formation and evolution. 
 						<br> In 2019, I earned my MS in Astronomy at San Diego State University studying the gas around galaxies (specifically involving the CGM
