--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 							<div class="row">
 							<div class="col-4 col-12-mobile">
 							<a href="#" class="image fit"><img src="images/IMG_0658.jpg" alt="" /></a>
+							<a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a>
 							</div>
 							<div class="col-8 col-12-mobile imp-mobile">
 							<p>										
