--- a/lyaE.html
+++ b/lyaE.html
@@ -88,7 +88,7 @@
 										<h2><b>WERLS Survey</b> </h2> <br>
 											with Caitlin M. Casey, Jeyhan Kartaltepe, Olivia Cooper, Arianna Long, Mike Cooper, and others
 											<br>
-											<a href="https://arxiv.org/abs/2307.04782" class="image fit"><img src="images/picture" alt="" /></a>
+											<a href="#" class="image fit"><img src="images/picture" alt="" /></a>
 											Summary of WERLS	<br>									
 											</p>
 										</p>
