--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@
 							<div class="row">
 							<div class="col-4 col-12-mobile">
 							<a href="#" class="image fit"><img src="images/IMG_0658.jpg" alt="" /></a>
-							<a href="#"><img src="images/nasaadslogo.png" alt="" /></a>
-							<a href="#" class="image fit"><img src="images/twitterlogo.png" alt="" /></a>
-
+							<a href="https://twitter.com/astrostawinski" class="image fit"><img src="images/twitterlogo.png" alt="" /></a>
+							<a href="#" class="image fit"><img src="images/nasaadslogo.png" alt="" /></a>
 							<h1><a href="https://twitter.com/astrostawinski" class="icon brands fa-twitter"><span class="label">Twitter</span></a></h1>
 							</div>
 							<div class="col-8 col-12-mobile imp-mobile">
