--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							<div class="col-4 col-12-mobile">
 							<a href="#" class="image fit"><img src="images/IMG_0658.jpg" alt="" /></a>
 							<h1><a href="https://twitter.com/astrostawinski" class="icon brands fa-twitter"><span class="label">Twitter</span></a></h1>
-							<a href="#" class="image right"><img src="images/nasaadslogo.png" alt="" /></a>
+							<a href="#"><img src="images/nasaadslogo.png" height="100" width="100" alt="" /></a>
 							</div>
 							<div class="col-8 col-12-mobile imp-mobile">
 							<p>										
