--- a/index.html
+++ b/index.html
@@ -59,8 +59,15 @@
 							<div class="row">
 							<div class="col-4 col-12-mobile">
 							<a href="#" class="image fit"><img src="images/IMG_0658.jpg" alt="" /></a>
+							<div class="container">
+							<div class="col-2 col-6-mobile">
+
 							<h1><a href="https://twitter.com/astrostawinski" class="icon brands fa-twitter"><span class="label">Twitter</span></a></h1>
+							</div>
+							<div class="col-2 col-6-mobile">
+
 							<h1><a href="#" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></h1>
+							</div>
 							</div>
 							<div class="col-8 col-12-mobile imp-mobile">
 							<p>										
