--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 							<h1><a href="#" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></h1>
 							</div>
 							</div>
+							</div>
 							<div class="col-8 col-12-mobile imp-mobile">
 							<p>										
 							Hello! I am a fourth year Astrophysics Ph.D candidate at University of California, Irvine interested in galaxy formation and evolution. 
