--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
 							<div class="col-8 col-12-mobile imp-mobile">
 							<p>										
 							Hello! I am a fourth year Astrophysics Ph.D candidate at University of California, Irvine interested in galaxy formation and evolution. 
-						<br> In 2019, I earned my MS in Astronomy at San Diego State University studying the <a href="cgm.html">gas around galaxies</a> (specifically involving the CGM
+						<br> In 2019, I earned my MS in Astronomy at San Diego State University studying the <a href="cgm.html"><span style="color:##4b0082">gas around galaxies</span></a> (specifically involving the CGM
 						Damped Lyman-alpha absorption line systems) and its effects on the host galaxy. 
-						Now at UCI, I have been working on detecting <a href="lyaE.html">Lyman-alpha emitters</a> at z > 4. Using the telescopes at Keck (mainly DEIMOS and LRIS), I have conducted surveys
+						Now at UCI, I have been working on detecting <a href="lyaE.html"><span style="color:##4b0082">Lyman-alpha emitters</span></a> at z > 4. Using the telescopes at Keck (mainly DEIMOS and LRIS), I have conducted surveys
 						searching for Lyman-alpha emission from distant galaxies.
 						I am part of the WERLS collaboration looking for high-z Lyman-alpha emitters in the EGS, COSMOS, and UDS fields using Keck/LRIS. I am 
-						also part of the MAGAZ3NE collaboration, specifically studying detected Lyman-alpha emission from <a href="umg.html">Ultra-Massive galaxies</a> at z > 4. <br>
+						also part of the MAGAZ3NE collaboration, specifically studying detected Lyman-alpha emission from <a href="umg.html"><span style="color:##4b0082">Ultra-Massive galaxies</span></a> at z > 4. <br>
 						Outside of my research, I believe mentorship, teaching, and outreach are 
 						incredibly important in encouraging others to pursue science and helping students succeed in academia. Throughout my career, I have 
 						worked to give back to the community in this way. I have volunteered in many outreach efforts and mentorship programs 
-						(read more about them <a href="outreach.html">here</a>). 
+						(read more about them <a href="outreach.html"><span style="color:##4b0082">here</span></a>). 
 						</p>
 						</div>
 						</div>
