--- a/index.html
+++ b/index.html
@@ -59,7 +59,14 @@
 							<div class="row">
 							<div class="col-4 col-12-mobile">
 							<a href="#" class="image fit"><img src="images/IMG_0658.jpg" alt="" /></a>
-					
+							<div class="row gtr-25">
+								<div class="col-6">
+									<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
+								</div>
+								<div class="col-6">
+									<a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
+								</div>
+							</div>
 							</div>
 							<div class="col-8 col-12-mobile imp-mobile">
 							<p>										
