--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 							</header>
 							<div class="row">
 							<div class="col-4 col-12-mobile">
-							<a href="#" class="image fit"><img src="images/IMG_0658.jpg" alt="" /></a>
+							<a href="#" class="image fit"><img src="images/IMG_0658.jpg" alt="" /></a><br>
 							<div class="row gtr-25">
 								<div class="col-6">
-									<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/twitterlogo.png" alt="" /></a>
 								</div>
 								<div class="col-6">
-									<a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/nasaadslogo.png" alt="" /></a>
 								</div>
 							</div>
 							</div>
