--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<a href="#" class="image fit"><img src="images/IMG_0658.jpg" alt="" /></a><br>
 							<div class="row gtr-25">
 								<div class="col-4">
-									<a href="#" class="image fit"><img src="images/twitterlogo.png" alt="" /></a>
+									<a href="https://twitter.com/astrostawinski" class="image fit"><img src="images/twitterlogo.png" alt="" /></a>
 								</div>
 								<div class="col-8">
 									<a href="#" class="image fit"><img src="images/nasaadslogo.png" alt="" /></a>
