--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 									<a href="https://twitter.com/astrostawinski" class="image fit"><img src="images/twitterlogo.png" alt="" /></a>
 								</div>
 								<div class="col-8">
-									<a href="#" class="image fit"><img src="images/nasaadslogo.png" alt="" /></a>
+									<a href="https://ui.adsabs.harvard.edu/search/p_=0&q=author%3A%22Urbano%20Stawinski%2C%20Stephanie%20M.%22&sort=date%20desc%2C%20bibcode%20desc" class="image fit">
+										<img src="images/nasaadslogo.png" alt="" /></a>
 								</div>
 							</div>
 							</div>
