--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							</div>
 							<div class="col-8 col-12-mobile imp-mobile">
 							<p>										
-							Hello! I am a fourth year Astrophysics Ph.D candidate at University of California, Irvine interested in galaxy formation and evolution. 
+							Hello! I am a fourth year Astrophysics Ph.D candidate and observational astronomer at University of California, Irvine. My main interests surround galaxy formation and evolution at high redshifts. 
 						<br> In 2019, I earned my MS in Astronomy at San Diego State University studying the <a href="cgm.html"><span style="color:#4b0082">gas around galaxies</span></a> (specifically involving the CGM
 						Damped Lyman-alpha absorption line systems) and its effects on the host galaxy. 
 						Now at UCI, I have been working on detecting <a href="lyaE.html"><span style="color:#4b0082">Lyman-alpha emitters</span></a> at z > 4. Using the telescopes at Keck (mainly DEIMOS and LRIS), I have conducted surveys
