--- a/lyaE.html
+++ b/lyaE.html
@@ -83,7 +83,9 @@
 											Lyman-α emitters with z<sub>phot</sub> > 3 for spectroscopic follow up with Keck/DEIMOS. We confirm 126 Lyman-α emitters 
 											at 2.8 < z < 6.5, including 4 with z > 6. Our observations will help constrain the Lyman-α fraction from 4 < z < 6 in an independent 
 											field from previous studies. In addition, this survey will greatly assist target selection for The Cosmic Evolution Early Release Science 
-											Survey (CEERS), which will study >400 galaxies in the EGS field within the first 5 months of JWST science observations.	<br>									</p>
+											Survey (CEERS), which will study >400 galaxies in the EGS field within the first 5 months of JWST science observations. <br>
+												Our survey website, where you can download the entire catalog, can be found here: <a href="https://sstawins.github.io/deeper_than_deep/index.html">
+												https://sstawins.github.io/deeper_than_deep/index.html</a><br>									</p>
 										</p>
 										<h2><b>WERLS Survey</b> </h2> <br>
 											with Caitlin M. Casey, Jeyhan Kartaltepe, Olivia Cooper, Arianna Long, Mike Cooper, and others
