--- a/cgm.html
+++ b/cgm.html
@@ -55,7 +55,7 @@
 	
 								<section>
 									<header>
-										<h3>Recent Publications </h3>
+										<h3>Quick Link Publications </h3>
 									</header>
 									<p>
 										This is under construction, to be updated soon!
@@ -67,6 +67,10 @@
 										<div class="col-8">
 											<h4></h4>
 											<p>
+												One of my main interest involves the study of diffuse gas surrounding galaxies (Circumgalactic Medium; CGM). 
+												My previous projects used absorption line systems from background quasars to understand the chemical
+												evolution of dim galaxies and their halos throughout cosmic time. Specifically, I have worked extensively on studies 
+												involving Damped Lyman-alpha systems and their surroundings. 
 											</p>
 									</div>
 
