--- a/cgm.html
+++ b/cgm.html
@@ -58,12 +58,10 @@
 										<h3>Quick Link Publications </h3>
 									</header>
 									<p>
-										This is under construction, to be updated soon!
-									</p>
+										<h4><span style="color:#00008B"><a href="https://ui.adsabs.harvard.edu/abs/2023arXiv230511232U/abstract"> 
+											On the Metallicities and Kinematics of the Circumgalactic Media of Damped Lyα Systems at  z∼2.5</a></span></h4>									</p>
 									<div class="row gtr-50">
-										<div class="col-4">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
-										</div>
+									
 										<div class="col-8">
 											<h4></h4>
 											<p>
