--- a/cgm.html
+++ b/cgm.html
@@ -59,24 +59,19 @@
 									</header>
 									<p>
 										<h4><span style="color:#00008B"><a href="https://ui.adsabs.harvard.edu/abs/2023arXiv230511232U/abstract"> 
-											On the Metallicities and Kinematics of the Circumgalactic Media of Damped Lyα Systems at  z∼2.5</a></span></h4>									</p>
-									<div class="row gtr-50">
-									
-										<div class="col-8">
-											<h4></h4>
-											<p>
-												One of my main interest involves the study of diffuse gas surrounding galaxies (Circumgalactic Medium; CGM). 
-												My previous projects used absorption line systems from background quasars to understand the chemical
-												evolution of dim galaxies and their halos throughout cosmic time. Specifically, I have worked extensively on studies 
-												involving Damped Lyman-alpha systems and their surroundings. 
-											</p>
-									</div>
-
+											On the Metallicities and Kinematics of the Circumgalactic Media of Damped Lyα Systems at  z∼2.5</a></span></h4>								
+									</p>
 								</section>
 							</div>
 							<div class="col-8 col-12-mobile imp-mobile" id="content">
 								<article id="main">
 									<section>
+										<p>
+												One of my main interest involves the study of diffuse gas surrounding galaxies (Circumgalactic Medium; CGM). 
+												My previous projects used absorption line systems from background quasars to understand the chemical
+												evolution of dim galaxies and their halos throughout cosmic time. Specifically, I have worked extensively on studies 
+												involving Damped Lyman-alpha systems and their surroundings. 
+										</p> <br>
 										<header>
 											<h3>Circumgalatic Medium of Damped Lyman-α Systems</h3>
 										</header>
