--- a/cgm.html
+++ b/cgm.html
@@ -73,8 +73,11 @@
 												involving Damped Lyman-alpha systems and their surroundings. 
 										</p> <br>
 										<header>
-											<h3>Circumgalatic Medium of Damped Lyman-α Systems</h3>
+											<h2>Circumgalatic Medium of Damped Lyman-α Systems</h2>
 										</header>
+											with Kate H. R. Rubin, J. Xavier Prochaska, Joseph F. Hennawi, Nicolas Tejos, Michele Fumagalli, Marc Rafelski, Evan N. Kirby, 
+										Elisabeta Lusso, and Zachary Hafen
+											<br>
 										<a href="#" class="image featured"><img src="images/cgmofDLAs_ex.jpg" alt="" /></a>
 
 										<p>
