--- a/index.html
+++ b/index.html
@@ -72,10 +72,11 @@
 							<div class="col-8 col-12-mobile imp-mobile">
 							<p>										
 							Hello! I am a fourth year Astrophysics Ph.D candidate and observational astronomer at University of California, Irvine. My main interests surround galaxy formation and evolution at high redshifts. 
-						<br> In 2019, I earned my MS in Astronomy at San Diego State University studying the <a href="cgm.html"><span style="color:#4b0082">gas around galaxies</span></a> (specifically involving the CGM
-						Damped Lyman-alpha absorption line systems) and its effects on the host galaxy. 
-						Now at UCI, I have been working on detecting <a href="lyaE.html"><span style="color:#4b0082">Lyman-alpha emitters</span></a> at z > 4. Using the telescopes at Keck (mainly DEIMOS and LRIS), I have conducted surveys
-						searching for Lyman-alpha emission from distant galaxies.
+								I work mostly with spectroscopic observations, both in emission and in absoprtion. 
+						<br> In 2019, I earned my MS in Astronomy at San Diego State University studying the <a href="cgm.html"><span style="color:#4b0082">gas around galaxies</span></a> (specifically involving the CGM of 
+						Damped Lyman-alpha systems) and its effects on the host galaxy. 
+						Now at UCI, I have been working on detecting <a href="lyaE.html"><span style="color:#4b0082">Lyman-alpha emitters</span></a> at z > 4. Using the telescopes at Keck (both DEIMOS and LRIS), I have conducted large
+								surveys searching for Lyman-alpha emission from distant galaxies.
 						I am part of the WERLS collaboration looking for high-z Lyman-alpha emitters in the EGS, COSMOS, and UDS fields using Keck/LRIS. I am 
 						also part of the MAGAZ3NE collaboration, specifically studying detected Lyman-alpha emission from <a href="umg.html"><span style="color:#4b0082">Ultra-Massive galaxies</span></a> at z > 4. <br>
 						Outside of my research, I believe mentorship, teaching, and outreach are 
