--- a/lyaE.html
+++ b/lyaE.html
@@ -30,7 +30,7 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Research</a>
+									<a href="research.html">Research</a>
 									<ul>
 										<li><a href="lyaE.html">High-Redshift Lya Emitters</a></li>
 										<li><a href="umgs.html">Ultra-Massive Galaxies</a></li>
