--- a/research.html
+++ b/research.html
@@ -80,6 +80,7 @@
 								</div>
 								</div>
 								</div>
+							</div>
 							
 								
 							<div class="col-6 col-12-mobile imp-mobile">
