--- a/research.html
+++ b/research.html
@@ -59,12 +59,12 @@
 								<div class="row">
 								
 								<div class="col-6 col-12-mobile">
-								<a href="#" class="image fit"><img src="images/lyE_gen.png" alt="" /></a><br>
+								<a href="#" class="image fit"><img src="images/lyE_gen.png" <img style="border:5 px solid black;" alt="" /></a><br>
 								</div>
 								
 								<div class="col-6 col-12-mobile">
 								<p>	
-								Summary of topic
+								<a href="lyaE.html">I work </a>
 								</p>
 								</div>
 								<div class="row">
