--- a/research.html
+++ b/research.html
@@ -59,12 +59,14 @@
 								<div class="row">
 								
 								<div class="col-6 col-12-mobile">
-								<a href="#" class="image fit"><img src="images/lyE_gen.png" <img style="border:5 px solid black;" alt="" /></a><br>
+								<a href="LyaE.html" class="image fit"><img src="images/lyE_gen.png" <img style="border:5 px solid black;" alt="" /></a><br>
 								</div>
 								
 								<div class="col-6 col-12-mobile">
 								<p>	
-								<a href="lyaE.html">I work </a>
+								<a href="lyaE.html"> I have worked on two different observational efforts to find
+								Lyman-alpha emitters at z > 3 in the EGS, COSMOS, and UDS fields using Keck spectrscopy. 
+								Click here to learn more about those surveys! </a>
 								</p>
 								</div>
 								<div class="row">
