--- a/research.html
+++ b/research.html
@@ -86,7 +86,7 @@
 								<div class="row">
 								
 								<div class="col-6 col-12-mobile">
-								<h3>Circumgalactic Medium</h3>
+								<h3>Circumgalactic Media</h3>
 								<a href="#" class="image fit"><img src="images/cgm_gen.png" style="border:3px solid black;" alt="" /></a><br>
 								</div>
 								
