--- a/research.html
+++ b/research.html
@@ -64,9 +64,9 @@
 								</div>
 								
 								<div class="col-6 col-12-mobile">
-								<p><small>I have worked on two different observational efforts to find
+								<p><small><small>I have worked on two different observational efforts to find
 								Lyman-alpha emitters at z > 3 in the EGS, COSMOS, and UDS fields using Keck spectrscopy. 										
-								<a href="lyaE.html" class="button">Learn More</a></small>
+								<a href="lyaE.html" class="button">Learn More</a></small></small>
 								</p>
 								</div>
 								<div class="row">
